src/Parsing/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.4 from src/Parsing/Parser.y
-----------------------------------------------------------------------------


rule 13 is unused
rule 23 is unused
rule 24 is unused
rule 27 is unused
rule 28 is unused
rule 39 is unused
rule 40 is unused
rule 44 is unused
rule 45 is unused
rule 68 is unused
rule 69 is unused
rule 70 is unused
rule 119 is unused
rule 128 is unused

terminal 'class' is unused
terminal 'default' is unused
terminal 'deriving' is unused
terminal 'infix' is unused
terminal 'infixl' is unused
terminal 'infixr' is unused
terminal 'instance' is unused
terminal 'newtype' is unused
terminal ':' is unused
terminal '<-' is unused
terminal '~' is unused
terminal '=>' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseModule -> module                       (0)
	varId -> tvarId                                    (1)
	varId -> 'qualified'                               (2)
	varId -> 'as'                                      (3)
	varId -> 'hiding'                                  (4)
	conId -> tconId                                    (5)
	symId -> tsymId                                    (6)
	symconId -> tsymconId                              (7)
	tyvarId -> tvarId                                  (8)
	tyvarId -> 'qualified'                             (9)
	tyvarId -> 'as'                                    (10)
	tyvarId -> 'hiding'                                (11)
	tyconId -> tconId                                  (12)
	tysymId -> tsymId                                  (13)
	tysymconId -> tsymconId                            (14)
	qvarId -> tvarId                                   (15)
	qvarId -> tqvarId                                  (16)
	qconId -> tconId                                   (17)
	qconId -> tqconId                                  (18)
	qsymId -> tsymId                                   (19)
	qsymId -> tqsymId                                  (20)
	qsymconId -> tsymconId                             (21)
	qsymconId -> tqsymconId                            (22)
	qtyvarId -> tvarId                                 (23)
	qtyvarId -> tqvarId                                (24)
	qtyconId -> tconId                                 (25)
	qtyconId -> tqconId                                (26)
	qtysymId -> tsymId                                 (27)
	qtysymId -> tqsymId                                (28)
	qtysymconId -> tsymconId                           (29)
	qtysymconId -> tqsymconId                          (30)
	svarId -> varId                                    (31)
	svarId -> delimited('(',symId,')')                 (32)
	sconId -> conId                                    (33)
	sconId -> delimited('(',symconId,')')              (34)
	qsvarId -> qvarId                                  (35)
	qsvarId -> delimited('(',qsymId,')')               (36)
	qsconId -> qconId                                  (37)
	qsconId -> delimited('(',qsymconId,')')            (38)
	styvarId -> tyvarId                                (39)
	styvarId -> delimited('(',tysymId,')')             (40)
	styconId -> tyconId                                (41)
	styconId -> delimited('(',tysymconId,')')          (42)
	styconId -> delimited('(',nonempty_list(','),')')   (43)
	qstyvarId -> qtyvarId                              (44)
	qstyvarId -> delimited('(',qtysymId,')')           (45)
	qstyconId -> qtyconId                              (46)
	qstyconId -> delimited('(',qtysymconId,')')        (47)
	module -> moduleHeader moduleBody EOF              (48)
	moduleHeader -> 'module' moduleName option(delimited('(',separated_list(export,','),')')) 'where'   (49)
	moduleHeader ->                                    (50)
	moduleBody -> '{' list(';') separated_nonempty_list(importDeclaration,nonempty_list(';')) nonempty_list(';') separated_nonempty_list(topDeclaration,nonempty_list(';')) list(';') '}'   (51)
	moduleBody -> '{' list(';') separated_nonempty_list(topDeclaration,nonempty_list(';')) list(';') '}'   (52)
	moduleName -> qconId                               (53)
	importDeclaration -> 'import' option('qualified') moduleName option(preceded('as',moduleName)) option(delimited('(',separated_list(import,','),')')) option(preceded('hiding',delimited('(',separated_list(import,','),')')))   (54)
	import -> varId                                    (55)
	import -> tyconId '(' '..' ')'                     (56)
	import -> tyconId '(' separated_list(conId,',') ')'   (57)
	export -> varId                                    (58)
	export -> tyconId '(' '..' ')'                     (59)
	export -> tyconId '(' separated_list(conId,',') ')'   (60)
	export -> 'module' moduleName                      (61)
	topDeclaration -> 'type' simpletype '=' type       (62)
	topDeclaration -> 'data' simpletype '=' separated_nonempty_list(constructor,'|')   (63)
	topDeclaration -> declaration                      (64)
	declaration -> separated_nonempty_list(svarId,',') '::' typeSignature   (65)
	declaration -> svarId nonempty_list(apattern) rightHandSide   (66)
	declaration -> pattern rightHandSide               (67)
	fixity -> 'infixl'                                 (68)
	fixity -> 'infixr'                                 (69)
	fixity -> 'infix'                                  (70)
	rightHandSide -> '=' expression                    (71)
	constructor -> sconId list(atype)                  (72)
	typeSignature -> type                              (73)
	simpletype -> styconId list(tyvarId)               (74)
	type -> separated_nonempty_list(btype,'->')        (75)
	btype -> nonempty_list(atype)                      (76)
	atype -> gtycon                                    (77)
	atype -> tyvarId                                   (78)
	atype -> delimited('(',separated_nonempty_list(type,','),')')   (79)
	atype -> delimited('[',type,']')                   (80)
	gtycon -> '(' ')'                                  (81)
	gtycon -> '[' ']'                                  (82)
	gtycon -> qstyconId                                (83)
	operator -> qsymId                                 (84)
	operator -> qsymconId                              (85)
	operator -> '`' qconId '`'                         (86)
	operator -> '`' qvarId '`'                         (87)
	expression -> expression10                         (88)
	expression -> expression operator expression10     (89)
	expression10 -> 'if' expression 'then' expression 'else' expression   (90)
	expression10 -> '\\' nonempty_list(apattern) '->' expression   (91)
	expression10 -> 'let' '{' list(';') separated_nonempty_list(declaration,nonempty_list(';')) list(';') '}' 'in' expression   (92)
	expression10 -> 'case' expression 'of' '{' separated_nonempty_list(option(casealternative),';') '}'   (93)
	expression10 -> 'do' '{' list(';') separated_nonempty_list(doBinding,nonempty_list(';')) list(';') '}'   (94)
	expression10 -> nonempty_list(aexpression)         (95)
	aexpression -> qsvarId                             (96)
	aexpression -> qsconId                             (97)
	aexpression -> integer                             (98)
	aexpression -> char                                (99)
	aexpression -> string                              (100)
	aexpression -> delimited('(',separated_list(expression,','),')')   (101)
	aexpression -> delimited('[',separated_list(expression,','),']')   (102)
	casealternative -> pattern '->' expression         (103)
	doBinding -> expression                            (104)
	doBinding -> 'let' '{' list(';') separated_nonempty_list(declaration,nonempty_list(';')) list(';') '}'   (105)
	pattern -> pattern10                               (106)
	pattern -> pattern qsymconId pattern10             (107)
	pattern10 -> apattern                              (108)
	pattern10 -> qconId nonempty_list_(apattern)       (109)
	apattern -> varId                                  (110)
	apattern -> varId '@' apattern                     (111)
	apattern -> '_'                                    (112)
	apattern -> qconId                                 (113)
	apattern -> delimited('(',separated_list(pattern,','),')')   (114)
	apattern -> delimited('[',separated_list(pattern,','),']')   (115)
	delimited('(',nonempty_list(','),')') -> '(' nonempty_list(',') ')'   (116)
	delimited('(',qsymId,')') -> '(' qsymId ')'        (117)
	delimited('(',qsymconId,')') -> '(' qsymconId ')'   (118)
	delimited('(',qtysymId,')') -> '(' qtysymId ')'    (119)
	delimited('(',qtysymconId,')') -> '(' qtysymconId ')'   (120)
	delimited('(',separated_list(export,','),')') -> '(' separated_list(export,',') ')'   (121)
	delimited('(',separated_list(expression,','),')') -> '(' separated_list(expression,',') ')'   (122)
	delimited('(',separated_list(import,','),')') -> '(' separated_list(import,',') ')'   (123)
	delimited('(',separated_list(pattern,','),')') -> '(' separated_list(pattern,',') ')'   (124)
	delimited('(',separated_nonempty_list(type,','),')') -> '(' separated_nonempty_list(type,',') ')'   (125)
	delimited('(',symId,')') -> '(' symId ')'          (126)
	delimited('(',symconId,')') -> '(' symconId ')'    (127)
	delimited('(',tysymId,')') -> '(' tysymId ')'      (128)
	delimited('(',tysymconId,')') -> '(' tysymconId ')'   (129)
	delimited('[',separated_list(expression,','),']') -> '[' separated_list(expression,',') ']'   (130)
	delimited('[',separated_list(pattern,','),']') -> '[' separated_list(pattern,',') ']'   (131)
	delimited('[',type,']') -> '[' type ']'            (132)
	list(';') -> list_L(';')                           (133)
	list(atype) -> list_L(atype)                       (134)
	list(tyvarId) -> list_L(tyvarId)                   (135)
	nonempty_list(',') -> nonempty_list_L(',')         (136)
	nonempty_list(';') -> nonempty_list_L(';')         (137)
	nonempty_list(aexpression) -> nonempty_list_L(aexpression)   (138)
	nonempty_list(apattern) -> nonempty_list_L(apattern)   (139)
	nonempty_list(atype) -> nonempty_list_L(atype)     (140)
	nonempty_list_(apattern) -> apattern list_(apattern)   (141)
	option('qualified') -> 'qualified'                 (142)
	option('qualified') ->                             (143)
	option(casealternative) -> casealternative         (144)
	option(casealternative) ->                         (145)
	option(delimited('(',separated_list(export,','),')')) -> delimited('(',separated_list(export,','),')')   (146)
	option(delimited('(',separated_list(export,','),')')) ->   (147)
	option(delimited('(',separated_list(import,','),')')) -> delimited('(',separated_list(import,','),')')   (148)
	option(delimited('(',separated_list(import,','),')')) ->   (149)
	option(preceded('as',moduleName)) -> preceded('as',moduleName)   (150)
	option(preceded('as',moduleName)) ->               (151)
	option(preceded('hiding',delimited('(',separated_list(import,','),')'))) -> preceded('hiding',delimited('(',separated_list(import,','),')'))   (152)
	option(preceded('hiding',delimited('(',separated_list(import,','),')'))) ->   (153)
	preceded('as',moduleName) -> 'as' moduleName       (154)
	preceded('hiding',delimited('(',separated_list(import,','),')')) -> 'hiding' delimited('(',separated_list(import,','),')')   (155)
	separated_list(conId,',') -> separated_list_L(conId,',')   (156)
	separated_list(export,',') -> separated_list_L(export,',')   (157)
	separated_list(expression,',') -> separated_list_L(expression,',')   (158)
	separated_list(import,',') -> separated_list_L(import,',')   (159)
	separated_list(pattern,',') -> separated_list_L(pattern,',')   (160)
	separated_nonempty_list(btype,'->') -> separated_nonempty_list(btype,'->') '->' btype   (161)
	separated_nonempty_list(btype,'->') -> btype       (162)
	separated_nonempty_list(constructor,'|') -> separated_nonempty_list(constructor,'|') '|' constructor   (163)
	separated_nonempty_list(constructor,'|') -> constructor   (164)
	separated_nonempty_list(declaration,nonempty_list(';')) -> separated_nonempty_list(declaration,nonempty_list(';')) nonempty_list(';') declaration   (165)
	separated_nonempty_list(declaration,nonempty_list(';')) -> declaration   (166)
	separated_nonempty_list(doBinding,nonempty_list(';')) -> separated_nonempty_list(doBinding,nonempty_list(';')) nonempty_list(';') doBinding   (167)
	separated_nonempty_list(doBinding,nonempty_list(';')) -> doBinding   (168)
	separated_nonempty_list(importDeclaration,nonempty_list(';')) -> separated_nonempty_list(importDeclaration,nonempty_list(';')) nonempty_list(';') importDeclaration   (169)
	separated_nonempty_list(importDeclaration,nonempty_list(';')) -> importDeclaration   (170)
	separated_nonempty_list(option(casealternative),';') -> separated_nonempty_list(option(casealternative),';') ';' option(casealternative)   (171)
	separated_nonempty_list(option(casealternative),';') -> option(casealternative)   (172)
	separated_nonempty_list(svarId,',') -> separated_nonempty_list(svarId,',') ',' svarId   (173)
	separated_nonempty_list(svarId,',') -> svarId      (174)
	separated_nonempty_list(topDeclaration,nonempty_list(';')) -> separated_nonempty_list(topDeclaration,nonempty_list(';')) nonempty_list(';') topDeclaration   (175)
	separated_nonempty_list(topDeclaration,nonempty_list(';')) -> topDeclaration   (176)
	separated_nonempty_list(type,',') -> separated_nonempty_list(type,',') ',' type   (177)
	separated_nonempty_list(type,',') -> type          (178)
	list_(apattern) -> apattern list_(apattern)        (179)
	list_(apattern) ->                                 (180)
	list_L(';') -> list_L(';') ';'                     (181)
	list_L(';') ->                                     (182)
	list_L(atype) -> list_L(atype) atype               (183)
	list_L(atype) ->                                   (184)
	list_L(tyvarId) -> list_L(tyvarId) tyvarId         (185)
	list_L(tyvarId) ->                                 (186)
	nonempty_list_L(',') -> list_L(',') ','            (187)
	nonempty_list_L(';') -> list_L(';') ';'            (188)
	nonempty_list_L(aexpression) -> list_L(aexpression) aexpression   (189)
	nonempty_list_L(apattern) -> list_L(apattern) apattern   (190)
	nonempty_list_L(atype) -> list_L(atype) atype      (191)
	separated_list_L(conId,',') -> separated_list_L(conId,',') ',' conId   (192)
	separated_list_L(conId,',') -> conId               (193)
	separated_list_L(conId,',') ->                     (194)
	separated_list_L(export,',') -> separated_list_L(export,',') ',' export   (195)
	separated_list_L(export,',') -> export             (196)
	separated_list_L(export,',') ->                    (197)
	separated_list_L(expression,',') -> separated_list_L(expression,',') ',' expression   (198)
	separated_list_L(expression,',') -> expression     (199)
	separated_list_L(expression,',') ->                (200)
	separated_list_L(import,',') -> separated_list_L(import,',') ',' import   (201)
	separated_list_L(import,',') -> import             (202)
	separated_list_L(import,',') ->                    (203)
	separated_list_L(pattern,',') -> separated_list_L(pattern,',') ',' pattern   (204)
	separated_list_L(pattern,',') -> pattern           (205)
	separated_list_L(pattern,',') ->                   (206)
	list_L(',') -> list_L(',') ','                     (207)
	list_L(',') ->                                     (208)
	list_L(aexpression) -> list_L(aexpression) aexpression   (209)
	list_L(aexpression) ->                             (210)
	list_L(apattern) -> list_L(apattern) apattern      (211)
	list_L(apattern) ->                                (212)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	tvarId         { t | isVariableIdentifier t }
	tconId         { t | isConstructorIdentifier t }
	tsymId         { t | isSymbolIdentifier t }
	tsymconId      { t | isSymbolConstructorIdentifier t }
	tqvarId        { t | isQVariableIdentifier t }
	tqconId        { t | isQConstructorIdentifier t }
	tqsymId        { t | isQSymbolIdentifier t }
	tqsymconId     { t | isQSymbolConstructorIdentifier t }
	integer        { (tokenToken -> TkInteger _) }
	char           { (tokenToken -> TkChar _) }
	string         { (tokenToken -> TkString _) }
	'case'         { (tokenToken -> TkCase) }
	'class'        { (tokenToken -> TkClass) }
	'data'         { (tokenToken -> TkData) }
	'default'      { (tokenToken -> TkDefault) }
	'deriving'     { (tokenToken -> TkDeriving) }
	'do'           { (tokenToken -> TkDo) }
	'else'         { (tokenToken -> TkElse) }
	'if'           { (tokenToken -> TkIf) }
	'import'       { (tokenToken -> TkImport) }
	'in'           { (tokenToken -> TkIn) }
	'infix'        { (tokenToken -> TkInfix) }
	'infixl'       { (tokenToken -> TkInfixl) }
	'infixr'       { (tokenToken -> TkInfixr) }
	'instance'     { (tokenToken -> TkInstance) }
	'let'          { (tokenToken -> TkLet) }
	'module'       { (tokenToken -> TkModule) }
	'newtype'      { (tokenToken -> TkNewtype) }
	'of'           { (tokenToken -> TkOf) }
	'then'         { (tokenToken -> TkThen) }
	'type'         { (tokenToken -> TkType) }
	'where'        { (tokenToken -> TkWhere) }
	'_'            { (tokenToken -> TkUnderscore) }
	'qualified'    { (tokenToken -> TkQualified) }
	'as'           { (tokenToken -> TkAs) }
	'hiding'       { (tokenToken -> TkHiding) }
	'..'           { (tokenToken -> TkDoubleDot) }
	':'            { (tokenToken -> TkColon) }
	'::'           { (tokenToken -> TkDoubleColon) }
	'='            { (tokenToken -> TkEqual) }
	'\\'           { (tokenToken -> TkLambda) }
	'|'            { (tokenToken -> TkPipe) }
	'<-'           { (tokenToken -> TkLArrow) }
	'->'           { (tokenToken -> TkRArrow) }
	'@'            { (tokenToken -> TkAt) }
	'~'            { (tokenToken -> TkTilde) }
	'=>'           { (tokenToken -> TkFatArrow) }
	'('            { (tokenToken -> TkLParen) }
	')'            { (tokenToken -> TkRParen) }
	','            { (tokenToken -> TkComma) }
	';'            { (tokenToken -> TkSemiColon) }
	'['            { (tokenToken -> TkLBracket) }
	']'            { (tokenToken -> TkRBracket) }
	'`'            { (tokenToken -> TkBackTick) }
	'{'            { (tokenToken -> TkLBrace) }
	'}'            { (tokenToken -> TkRBrace) }
	EOF            { (tokenToken -> TkEOF) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseModule rule  0
	varId           rules 1, 2, 3, 4
	conId           rule  5
	symId           rule  6
	symconId        rule  7
	tyvarId         rules 8, 9, 10, 11
	tyconId         rule  12
	tysymId         rule  13
	tysymconId      rule  14
	qvarId          rules 15, 16
	qconId          rules 17, 18
	qsymId          rules 19, 20
	qsymconId       rules 21, 22
	qtyvarId        rules 23, 24
	qtyconId        rules 25, 26
	qtysymId        rules 27, 28
	qtysymconId     rules 29, 30
	svarId          rules 31, 32
	sconId          rules 33, 34
	qsvarId         rules 35, 36
	qsconId         rules 37, 38
	styvarId        rules 39, 40
	styconId        rules 41, 42, 43
	qstyvarId       rules 44, 45
	qstyconId       rules 46, 47
	module          rule  48
	moduleHeader    rules 49, 50
	moduleBody      rules 51, 52
	moduleName      rule  53
	importDeclaration rule  54
	import          rules 55, 56, 57
	export          rules 58, 59, 60, 61
	topDeclaration  rules 62, 63, 64
	declaration     rules 65, 66, 67
	fixity          rules 68, 69, 70
	rightHandSide   rule  71
	constructor     rule  72
	typeSignature   rule  73
	simpletype      rule  74
	type            rule  75
	btype           rule  76
	atype           rules 77, 78, 79, 80
	gtycon          rules 81, 82, 83
	operator        rules 84, 85, 86, 87
	expression      rules 88, 89
	expression10    rules 90, 91, 92, 93, 94, 95
	aexpression     rules 96, 97, 98, 99, 100, 101, 102
	casealternative rule  103
	doBinding       rules 104, 105
	pattern         rules 106, 107
	pattern10       rules 108, 109
	apattern        rules 110, 111, 112, 113, 114, 115
	delimited('(',nonempty_list(','),')') rule  116
	delimited('(',qsymId,')') rule  117
	delimited('(',qsymconId,')') rule  118
	delimited('(',qtysymId,')') rule  119
	delimited('(',qtysymconId,')') rule  120
	delimited('(',separated_list(export,','),')') rule  121
	delimited('(',separated_list(expression,','),')') rule  122
	delimited('(',separated_list(import,','),')') rule  123
	delimited('(',separated_list(pattern,','),')') rule  124
	delimited('(',separated_nonempty_list(type,','),')') rule  125
	delimited('(',symId,')') rule  126
	delimited('(',symconId,')') rule  127
	delimited('(',tysymId,')') rule  128
	delimited('(',tysymconId,')') rule  129
	delimited('[',separated_list(expression,','),']') rule  130
	delimited('[',separated_list(pattern,','),']') rule  131
	delimited('[',type,']') rule  132
	list(';')       rule  133
	list(atype)     rule  134
	list(tyvarId)   rule  135
	nonempty_list(',') rule  136
	nonempty_list(';') rule  137
	nonempty_list(aexpression) rule  138
	nonempty_list(apattern) rule  139
	nonempty_list(atype) rule  140
	nonempty_list_(apattern) rule  141
	option('qualified') rules 142, 143
	option(casealternative) rules 144, 145
	option(delimited('(',separated_list(export,','),')')) rules 146, 147
	option(delimited('(',separated_list(import,','),')')) rules 148, 149
	option(preceded('as',moduleName)) rules 150, 151
	option(preceded('hiding',delimited('(',separated_list(import,','),')'))) rules 152, 153
	preceded('as',moduleName) rule  154
	preceded('hiding',delimited('(',separated_list(import,','),')')) rule  155
	separated_list(conId,',') rule  156
	separated_list(export,',') rule  157
	separated_list(expression,',') rule  158
	separated_list(import,',') rule  159
	separated_list(pattern,',') rule  160
	separated_nonempty_list(btype,'->') rules 161, 162
	separated_nonempty_list(constructor,'|') rules 163, 164
	separated_nonempty_list(declaration,nonempty_list(';')) rules 165, 166
	separated_nonempty_list(doBinding,nonempty_list(';')) rules 167, 168
	separated_nonempty_list(importDeclaration,nonempty_list(';')) rules 169, 170
	separated_nonempty_list(option(casealternative),';') rules 171, 172
	separated_nonempty_list(svarId,',') rules 173, 174
	separated_nonempty_list(topDeclaration,nonempty_list(';')) rules 175, 176
	separated_nonempty_list(type,',') rules 177, 178
	list_(apattern) rules 179, 180
	list_L(';')     rules 181, 182
	list_L(atype)   rules 183, 184
	list_L(tyvarId) rules 185, 186
	nonempty_list_L(',') rule  187
	nonempty_list_L(';') rule  188
	nonempty_list_L(aexpression) rule  189
	nonempty_list_L(apattern) rule  190
	nonempty_list_L(atype) rule  191
	separated_list_L(conId,',') rules 192, 193, 194
	separated_list_L(export,',') rules 195, 196, 197
	separated_list_L(expression,',') rules 198, 199, 200
	separated_list_L(import,',') rules 201, 202, 203
	separated_list_L(pattern,',') rules 204, 205, 206
	list_L(',')     rules 207, 208
	list_L(aexpression) rules 209, 210
	list_L(apattern) rules 211, 212

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'module'       shift, and enter state 5
	'{'            reduce using rule 50

	module         goto state 3
	moduleHeader   goto state 4

State 1


	tvarId         shift, and enter state 2


State 2

	varId -> tvarId .                                   (rule 1)

	tvarId         reduce using rule 1
	tconId         reduce using rule 1
	tsymconId      reduce using rule 1
	tqconId        reduce using rule 1
	tqsymconId     reduce using rule 1
	'_'            reduce using rule 1
	'qualified'    reduce using rule 1
	'as'           reduce using rule 1
	'hiding'       reduce using rule 1
	'::'           reduce using rule 1
	'='            reduce using rule 1
	'->'           reduce using rule 1
	'@'            reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	','            reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1


State 3

	%start_parseModule -> module .                      (rule 0)

	%eof           accept


State 4

	module -> moduleHeader . moduleBody EOF             (rule 48)

	'{'            shift, and enter state 11

	moduleBody     goto state 10

State 5

	moduleHeader -> 'module' . moduleName option(delimited('(',separated_list(export,','),')')) 'where'    (rule 49)

	tconId         shift, and enter state 8
	tqconId        shift, and enter state 9

	qconId         goto state 6
	moduleName     goto state 7

State 6

	moduleName -> qconId .                              (rule 53)

	'where'        reduce using rule 53
	'as'           reduce using rule 53
	'hiding'       reduce using rule 53
	'('            reduce using rule 53
	')'            reduce using rule 53
	','            reduce using rule 53
	';'            reduce using rule 53


State 7

	moduleHeader -> 'module' moduleName . option(delimited('(',separated_list(export,','),')')) 'where'    (rule 49)

	'where'        reduce using rule 147
	'('            shift, and enter state 17

	delimited('(',separated_list(export,','),')')goto state 15
	option(delimited('(',separated_list(export,','),')'))goto state 16

State 8

	qconId -> tconId .                                  (rule 17)

	tvarId         reduce using rule 17
	tconId         reduce using rule 17
	tsymId         reduce using rule 17
	tsymconId      reduce using rule 17
	tqvarId        reduce using rule 17
	tqconId        reduce using rule 17
	tqsymId        reduce using rule 17
	tqsymconId     reduce using rule 17
	integer        reduce using rule 17
	char           reduce using rule 17
	string         reduce using rule 17
	'else'         reduce using rule 17
	'of'           reduce using rule 17
	'then'         reduce using rule 17
	'where'        reduce using rule 17
	'_'            reduce using rule 17
	'qualified'    reduce using rule 17
	'as'           reduce using rule 17
	'hiding'       reduce using rule 17
	'='            reduce using rule 17
	'->'           reduce using rule 17
	'('            reduce using rule 17
	')'            reduce using rule 17
	','            reduce using rule 17
	';'            reduce using rule 17
	'['            reduce using rule 17
	']'            reduce using rule 17
	'`'            reduce using rule 17
	'}'            reduce using rule 17


State 9

	qconId -> tqconId .                                 (rule 18)

	tvarId         reduce using rule 18
	tconId         reduce using rule 18
	tsymId         reduce using rule 18
	tsymconId      reduce using rule 18
	tqvarId        reduce using rule 18
	tqconId        reduce using rule 18
	tqsymId        reduce using rule 18
	tqsymconId     reduce using rule 18
	integer        reduce using rule 18
	char           reduce using rule 18
	string         reduce using rule 18
	'else'         reduce using rule 18
	'of'           reduce using rule 18
	'then'         reduce using rule 18
	'where'        reduce using rule 18
	'_'            reduce using rule 18
	'qualified'    reduce using rule 18
	'as'           reduce using rule 18
	'hiding'       reduce using rule 18
	'='            reduce using rule 18
	'->'           reduce using rule 18
	'('            reduce using rule 18
	')'            reduce using rule 18
	','            reduce using rule 18
	';'            reduce using rule 18
	'['            reduce using rule 18
	']'            reduce using rule 18
	'`'            reduce using rule 18
	'}'            reduce using rule 18


State 10

	module -> moduleHeader moduleBody . EOF             (rule 48)

	EOF            shift, and enter state 14


State 11

	moduleBody -> '{' . list(';') separated_nonempty_list(importDeclaration,nonempty_list(';')) nonempty_list(';') separated_nonempty_list(topDeclaration,nonempty_list(';')) list(';') '}'    (rule 51)
	moduleBody -> '{' . list(';') separated_nonempty_list(topDeclaration,nonempty_list(';')) list(';') '}'    (rule 52)

	tvarId         reduce using rule 182
	tconId         reduce using rule 182
	tqconId        reduce using rule 182
	'data'         reduce using rule 182
	'import'       reduce using rule 182
	'type'         reduce using rule 182
	'_'            reduce using rule 182
	'qualified'    reduce using rule 182
	'as'           reduce using rule 182
	'hiding'       reduce using rule 182
	'('            reduce using rule 182
	';'            reduce using rule 182
	'['            reduce using rule 182

	list(';')      goto state 12
	list_L(';')    goto state 13

State 12

	moduleBody -> '{' list(';') . separated_nonempty_list(importDeclaration,nonempty_list(';')) nonempty_list(';') separated_nonempty_list(topDeclaration,nonempty_list(';')) list(';') '}'    (rule 51)
	moduleBody -> '{' list(';') . separated_nonempty_list(topDeclaration,nonempty_list(';')) list(';') '}'    (rule 52)

	tvarId         shift, and enter state 2
	tconId         shift, and enter state 8
	tqconId        shift, and enter state 9
	'data'         shift, and enter state 45
	'import'       shift, and enter state 46
	'type'         shift, and enter state 47
	'_'            shift, and enter state 48
	'qualified'    shift, and enter state 25
	'as'           shift, and enter state 26
	'hiding'       shift, and enter state 27
	'('            shift, and enter state 49
	'['            shift, and enter state 50

	varId          goto state 30
	qconId         goto state 31
	svarId         goto state 32
	importDeclarationgoto state 33
	topDeclaration goto state 34
	declaration    goto state 35
	pattern        goto state 36
	pattern10      goto state 37
	apattern       goto state 38
	delimited('(',separated_list(pattern,','),')')goto state 39
	delimited('(',symId,')')goto state 40
	delimited('[',separated_list(pattern,','),']')goto state 41
	separated_nonempty_list(importDeclaration,nonempty_list(';'))goto state 42
	separated_nonempty_list(svarId,',')goto state 43
	separated_nonempty_list(topDeclaration,nonempty_list(';'))goto state 44

State 13

	list(';') -> list_L(';') .                          (rule 133)
	list_L(';') -> list_L(';') . ';'                    (rule 181)

	tvarId         reduce using rule 133
	tconId         reduce using rule 133
	tqvarId        reduce using rule 133
	tqconId        reduce using rule 133
	integer        reduce using rule 133
	char           reduce using rule 133
	string         reduce using rule 133
	'case'         reduce using rule 133
	'data'         reduce using rule 133
	'do'           reduce using rule 133
	'if'           reduce using rule 133
	'import'       reduce using rule 133
	'let'          reduce using rule 133
	'type'         reduce using rule 133
	'_'            reduce using rule 133
	'qualified'    reduce using rule 133
	'as'           reduce using rule 133
	'hiding'       reduce using rule 133
	'\\'           reduce using rule 133
	'('            reduce using rule 133
	';'            shift, and enter state 29
	'['            reduce using rule 133


State 14

	module -> moduleHeader moduleBody EOF .             (rule 48)

	%eof           reduce using rule 48


State 15

	option(delimited('(',separated_list(export,','),')')) -> delimited('(',separated_list(export,','),')') .    (rule 146)

	'where'        reduce using rule 146


State 16

	moduleHeader -> 'module' moduleName option(delimited('(',separated_list(export,','),')')) . 'where'    (rule 49)

	'where'        shift, and enter state 28


State 17

	delimited('(',separated_list(export,','),')') -> '(' . separated_list(export,',') ')'    (rule 121)

	tvarId         shift, and enter state 2
	tconId         shift, and enter state 23
	'module'       shift, and enter state 24
	'qualified'    shift, and enter state 25
	'as'           shift, and enter state 26
	'hiding'       shift, and enter state 27
	')'            reduce using rule 197
	','            reduce using rule 197

	varId          goto state 18
	tyconId        goto state 19
	export         goto state 20
	separated_list(export,',')goto state 21
	separated_list_L(export,',')goto state 22

State 18

	export -> varId .                                   (rule 58)

	')'            reduce using rule 58
	','            reduce using rule 58


State 19

	export -> tyconId . '(' '..' ')'                    (rule 59)
	export -> tyconId . '(' separated_list(conId,',') ')'    (rule 60)

	'('            shift, and enter state 91


State 20

	separated_list_L(export,',') -> export .            (rule 196)

	')'            reduce using rule 196
	','            reduce using rule 196


State 21

	delimited('(',separated_list(export,','),')') -> '(' separated_list(export,',') . ')'    (rule 121)

	')'            shift, and enter state 90


State 22

	separated_list(export,',') -> separated_list_L(export,',') .    (rule 157)
	separated_list_L(export,',') -> separated_list_L(export,',') . ',' export    (rule 195)

	')'            reduce using rule 157
	','            shift, and enter state 89


State 23

	tyconId -> tconId .                                 (rule 12)

	tvarId         reduce using rule 12
	'qualified'    reduce using rule 12
	'as'           reduce using rule 12
	'hiding'       reduce using rule 12
	'='            reduce using rule 12
	'('            reduce using rule 12


State 24

	export -> 'module' . moduleName                     (rule 61)

	tconId         shift, and enter state 8
	tqconId        shift, and enter state 9

	qconId         goto state 6
	moduleName     goto state 88

State 25

	varId -> 'qualified' .                              (rule 2)

	tvarId         reduce using rule 2
	tconId         reduce using rule 2
	tsymconId      reduce using rule 2
	tqconId        reduce using rule 2
	tqsymconId     reduce using rule 2
	'_'            reduce using rule 2
	'qualified'    reduce using rule 2
	'as'           reduce using rule 2
	'hiding'       reduce using rule 2
	'::'           reduce using rule 2
	'='            reduce using rule 2
	'->'           reduce using rule 2
	'@'            reduce using rule 2
	'('            reduce using rule 2
	')'            reduce using rule 2
	','            reduce using rule 2
	'['            reduce using rule 2
	']'            reduce using rule 2


State 26

	varId -> 'as' .                                     (rule 3)

	tvarId         reduce using rule 3
	tconId         reduce using rule 3
	tsymconId      reduce using rule 3
	tqconId        reduce using rule 3
	tqsymconId     reduce using rule 3
	'_'            reduce using rule 3
	'qualified'    reduce using rule 3
	'as'           reduce using rule 3
	'hiding'       reduce using rule 3
	'::'           reduce using rule 3
	'='            reduce using rule 3
	'->'           reduce using rule 3
	'@'            reduce using rule 3
	'('            reduce using rule 3
	')'            reduce using rule 3
	','            reduce using rule 3
	'['            reduce using rule 3
	']'            reduce using rule 3


State 27

	varId -> 'hiding' .                                 (rule 4)

	tvarId         reduce using rule 4
	tconId         reduce using rule 4
	tsymconId      reduce using rule 4
	tqconId        reduce using rule 4
	tqsymconId     reduce using rule 4
	'_'            reduce using rule 4
	'qualified'    reduce using rule 4
	'as'           reduce using rule 4
	'hiding'       reduce using rule 4
	'::'           reduce using rule 4
	'='            reduce using rule 4
	'->'           reduce using rule 4
	'@'            reduce using rule 4
	'('            reduce using rule 4
	')'            reduce using rule 4
	','            reduce using rule 4
	'['            reduce using rule 4
	']'            reduce using rule 4


State 28

	moduleHeader -> 'module' moduleName option(delimited('(',separated_list(export,','),')')) 'where' .    (rule 49)

	'{'            reduce using rule 49


State 29

	list_L(';') -> list_L(';') ';' .                    (rule 181)
